// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="mobile-only"
    >
      Expenses
    </div>
    <div
      className="desktop-only"
    >
      Expense
    </div>
    <div
      className="desktop-only"
    >
      Amount
    </div>
  </div>
  <div
    class="list-body"
  >
    <ExpenseListItem
      amount={195}
      createdAt={0}
      description="Gum"
      id="1"
      key="1"
      note=""
    />
    <ExpenseListItem
      amount={109500}
      createdAt={-259200000}
      description="Rent"
      id="2"
      key="2"
      note=""
    />
    <ExpenseListItem
      amount={45000}
      createdAt={345600000}
      description="Credit Card"
      id="3"
      key="3"
      note=""
    />
  </div>
</div>
`;

exports[`should render message if no expenses are provided 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="mobile-only"
    >
      Expenses
    </div>
    <div
      className="desktop-only"
    >
      Expense
    </div>
    <div
      className="desktop-only"
    >
      Amount
    </div>
  </div>
  <div
    class="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;
